force-app/main/default/objects/nBRIDGER__OFAC_Request__c/nBRIDGER__OFAC_Request__c.object-meta.xml
<CustomObject>
    <description>Object to hold the OFAC request</description>
    <label>OFAC_Request</label>
    <nameField>
        <label>OFAC_Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OFAC_Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>