force-app/main/default/objects/nBRIDGER__OFAC_Request__c/fields/nBRIDGER__Account__c.field-meta.xml
<CustomField>
    <fullName>nBRIDGER__Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to Account</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>OFAC_Requests</relationshipLabel>
    <relationshipName>OFAC_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>