force-app/main/default/objects/nBRIDGER__OFAC_Request__c/fields/nBRIDGER__Birthdate__c.field-meta.xml
<CustomField>
    <fullName>nBRIDGER__Birthdate__c</fullName>
    <label>Birthdate</label>
    <length>50</length>
    <type>Text</type>
</CustomField>