force-app/main/default/objects/nBRIDGER__OFAC_Request__c/fields/nBRIDGER__Engine__c.field-meta.xml
<CustomField>
    <fullName>nBRIDGER__Engine__c</fullName>
    <description>The engine received</description>
    <label>Engine</label>
    <length>255</length>
    <type>Text</type>
</CustomField>