force-app/main/default/objects/nBRIDGER__OFAC_Request__c/fields/nBRIDGER__Gender__c.field-meta.xml
<CustomField>
    <fullName>nBRIDGER__Gender__c</fullName>
    <description>Gender</description>
    <label>Gender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>