force-app/main/default/objects/nBRIDGER__OFAC_Request__c/fields/nBRIDGER__Is_Individual__c.field-meta.xml
<CustomField>
    <fullName>nBRIDGER__Is_Individual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is_Individual</label>
    <type>Checkbox</type>
</CustomField>