force-app/main/default/objects/nBRIDGER__OFAC_Request__c/fields/nBRIDGER__Nationality__c.field-meta.xml
<CustomField>
    <fullName>nBRIDGER__Nationality__c</fullName>
    <description>Nationality</description>
    <label>Nationality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>