force-app/main/default/objects/nBRIDGER__OFAC_Request__c/fields/nBRIDGER__Object_Id__c.field-meta.xml
<CustomField>
    <fullName>nBRIDGER__Object_Id__c</fullName>
    <description>Request was triggered from this Object (Account, Loan, Package)</description>
    <label>Object Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>