force-app/main/default/objects/nBRIDGER__OFAC_Request__c/fields/nBRIDGER__Reason__c.field-meta.xml
<CustomField>
    <fullName>nBRIDGER__Reason__c</fullName>
    <description>--DEPRECATED-- Reasons this OFAC Request was made.</description>
    <label>-D Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>