force-app/main/default/objects/nBRIDGER__OFAC_Request__c/fields/nBRIDGER__ResultId__c.field-meta.xml
<CustomField>
    <fullName>nBRIDGER__ResultId__c</fullName>
    <description>The unique alert ID returned by Bridger for each request made to Lexis Nexis Bridger.</description>
    <externalId>true</externalId>
    <label>ResultId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>