force-app/main/default/objects/nBRIDGER__OFAC_Request__c/fields/nBRIDGER__Send_Date__c.field-meta.xml
<CustomField>
    <fullName>nBRIDGER__Send_Date__c</fullName>
    <description>The date/time in which the request was made</description>
    <label>Send_Date</label>
    <type>DateTime</type>
</CustomField>