force-app/main/default/objects/nBRIDGER__OFAC_Request__c/fields/nBRIDGER__SSN__c.field-meta.xml
<CustomField>
    <fullName>nBRIDGER__SSN__c</fullName>
    <label>SSN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>