force-app/main/default/objects/nBRIDGER__OFAC_Request__c/fields/nBRIDGER__State__c.field-meta.xml
<CustomField>
    <fullName>nBRIDGER__State__c</fullName>
    <label>State</label>
    <length>25</length>
    <type>Text</type>
</CustomField>